Fix: Space header subtitles get cutoff for some letters

--- a/themes/clean-base/less/humhub/panel.less
+++ b/themes/clean-base/less/humhub/panel.less
@@ -43,6 +43,8 @@
 
       h2.space {
         font-weight: 400;
+        margin-bottom: 0;
+        line-height: 16px;
       }
     }
 
